# monadius

./: Monadius.cabal  README.md  Setup.hs  readme-e.txt  readme-j.txt
Monadius/: Demo.hs  Game.hs  Main.hs  Monadius.hs  Recorder.hs  Util.hs
src/: Demo.hs  Game.hs  Main.hs  Monadius.hs  Recorder.hs  Util.hs
