Name:                Monadius
Version:             0.96

Synopsis:            2-D arcade scroller
Description:         A fast-paced 2-D scrolling vector graphics clone of the arcade game Gradius;
                     it is dedicated to the 20th anniversary of Gradius series.

License:             GPL
License-file:        LICENSE

Author:              Takayuki Muranushi & Hideyuki Tanaka
Maintainer:          Hideyuki Tanaka <tanaka.hideyuki@gmail.com>

Stability:           Stable
Category:            Game

Homepage:            http://www.geocities.jp/takascience/haskell/monadius_en.html

Build-type:          Simple
Cabal-version:       >= 1.6

Data-files:          readme-e.txt, readme-j.txt

Executable monadius
  Build-depends:       base      >= 4 && < 5
                     , array     >= 0.3 && < 0.5
                     , directory >= 1.1 && < 1.2
                     , GLUT      >= 2.2 && < 2.3
                     , OpenGL    >= 2.4 && < 2.5

  Hs-source-dirs:      Monadius
  Ghc-options:         -Wall

  if os(windows)
    Ghc-options:       -optl-mwindows

  Main-is:             Main.hs
  Other-modules:       Demo
                       Game
                       Monadius
                       Recorder
                       Util

Source-repository head
  type:           git
  location:       git://github.com/tanakh/monadius.git
